Fixed the whitespace

--- a/index.css
+++ b/index.css
@@ -18,16 +18,13 @@
 
 html,
 body {
-  -webkit-text-size-adjust: none;
-  -moz-text-size-adjust: none;
-  -ms-text-size-adjust: none;
-  text-size-adjust: none;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .main {
   background-color: #c5bdb4;
   position: relative;
+  overflow: hidden;
 }
 
 .no-copy {
